src/test/ui/compile-fail-migration/associated-types/bound-lifetime-in-binding-only.ok.stderr
error: compilation successful
  --> $DIR/bound-lifetime-in-binding-only.rs:81:1
   |
LL | fn main() { } //[ok]~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

